Rakib Added to About page & Mymensingh added in division

--- a/templates/app1/index.html
+++ b/templates/app1/index.html
@@ -195,6 +195,7 @@
                             <li><a href="{% url 'division_detail' "khulna" %}">Khulna</a></li>
                             <li><a href="{% url 'division_detail' "barisal" %}">Barisal</a></li>
                             <li><a href="{% url 'division_detail' "rangpur" %}">Rangpur</a></li>
+                            <li><a href="{% url 'division_detail' "mymensingh" %}">Mymensingh</a></li>
                         </ul>
                     </div>
                 </div>
