--- a/templates/app1/about.html
+++ b/templates/app1/about.html
@@ -53,8 +53,12 @@
         }
 
         .xyz-name {
-            font-size: 16px;
+            font-size: 18px;
             font-weight: bold;
+        }
+
+        .xyz-post {
+            font-size: 16px;
         }
 
         .xyz-img {
@@ -119,7 +123,7 @@
         </div>
 
         <div class="row">
-            <div class="col-sm-4 xyz-profile">
+            <div class="col-sm-6 xyz-profile">
                 <div class="xyz-img">
                     <img src="{% static 'app1/img/imran.jpg' %}" alt="Mohammad Imran Hossain">
                 </div>
@@ -130,7 +134,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4 xyz-profile">
+            <div class="col-sm-6 xyz-profile">
                 <div class="xyz-img">
                     <img src="{% static 'app1/img/shafee.jpg' %}" alt="Rashid Al Shafee">
                 </div>
@@ -141,7 +145,21 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4 xyz-profile">
+        </div>
+
+        <div class="row">
+            <div class="col-sm-6 xyz-profile">
+                <div class="xyz-img">
+                    <img src="{% static 'app1/img/rakib.jpg' %}" alt="Rakibul Huda">
+                </div>
+                <div class="xyz-card xyz-details">
+                    <div class="xyz-container">
+                        <p class="xyz-name">Rakibul Huda</p>
+                        <p class="xyz-post">Software Engineer</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 xyz-profile">
                 <div class="xyz-img">
                     <img src="{% static 'app1/img/shohag.jpg' %}" alt="Md. Mahmudul Hasan Shohag">
                 </div>
