pic added to every story show page and gitlab notification test

--- a/static/app1/css/style.css
+++ b/static/app1/css/style.css
@@ -685,6 +685,10 @@ Utility Size class
     margin-top: 30px;
     margin-bottom: 30px;
 }
+/**
+scroll to top button
+ */
+
 
 /**
  * Style for big screens ;)
